apps/prod/rbx-briefing-btc/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-briefing-btc
spec:
  redirectScheme:
    scheme: https
    permanent: true
