apps/prod/rbx-briefing-btc/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-briefing-btc
  namespace: rbx-briefing-btc
  labels:
    app.kubernetes.io/name: rbx-briefing-btc
    app.kubernetes.io/part-of: rbx-briefing-btc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-briefing-btc
  ports:
    - port: 80
      targetPort: 3000
      name: http
